Updates the package JSON file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactive",
   "version": "0.0.0",
-  "description": "TODO",
+  "description": "coming soon",
   "repository": "https://github.com/simon-robertson-shift/reactive.git",
   "contributors": [
     {
