Rename the package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactive",
+  "name": "@simon-robertson-online/reactive",
   "version": "0.0.0",
   "description": "coming soon",
   "repository": "https://github.com/simon-robertson-shift/reactive.git",
