--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
         "declaration": true,
         "forceConsistentCasingInFileNames": true,
         "lib": ["ES2020"],
-        "module": "commonjs",
+        "module": "ES2020",
         "moduleResolution": "node",
+        "removeComments": true,
         "strict": true,
         "target": "ES2020"
     }
