Moved to an NPM org

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@simon-robertson-online/reactive",
+    "name": "@nomemo/reactive",
     "version": "0.0.3",
     "description": "",
     "repository": "https://github.com/simon-robertson-shift/reactive.git",
